--- a/pg.html
+++ b/pg.html
@@ -101,7 +101,7 @@
 <body>
     <main>
         <div class="confirmation-box">
-            <p class="confirmation-text">Nature Awaits: Confirm Your Interest & Click Watch Now!</p>
+            <p class="confirmation-text">Confirme your age: Click "WATCH NOW" if You Have +40!</p>
             <a href="https://dailywell-being.site/pg1">
             <button class="btn" id="proceedButton">WATCH NOW</button>
         </a>
