--- a/index.html
+++ b/index.html
@@ -3,292 +3,154 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sugar Sweep – Daily Blood‑Sugar Support</title>
+  <title>Sugar Sweep – Everyday Glucose Balance</title>
 
-  <!-- ── Minimal, neutral styling ── -->
   <style>
     :root{
-      --brand: #543062;      /* plum */
-      --accent: #ffd34d;     /* warm yellow for CTAs */
-      --text:   #333;
-      --light:  #f9f9f9;
+      --bg:      #f0f4f7;   /* pale gray‑blue */
+      --header:  #e7eef2;   /* lighter header */
+      --accent:  #ff7052;   /* coral buttons */
+      --text:    #444;
     }
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:Arial,Helvetica,sans-serif;background:#fff;color:var(--text);line-height:1.6}
-    h1,h2,h3{font-weight:700;margin:0 0 10px}
-    h1{font-size:30px;color:var(--brand)}
-    h2{font-size:26px}
+    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
+    h1,h2,h3{color:#222;margin-bottom:10px}
+    h1{font-size:28px;margin-top:20px}
+    h2{font-size:24px}
     h3{font-size:20px}
-    p{margin:10px 0}
-    a{text-decoration:none;color:inherit}
 
-    header,footer{background:var(--brand);color:#fff;text-align:center;padding:25px 10px}
-    .hero{padding:40px 15px;text-align:center;background:var(--brand);color:#fff}
-    .hero img{max-width:140px;margin:20px 0}
-    .container{width:92%;max-width:1050px;margin:0 auto;padding:40px 0}
+    header,footer{text-align:center;padding:22px;background:var(--header)}
+    header img{max-width:200px}
 
-    /* highlights grid */
-    .grid{display:flex;flex-wrap:wrap;gap:25px;justify-content:center}
-    .card{flex:1 1 220px;border:1px solid #e0e0e0;border-radius:6px;padding:18px;text-align:center;background:#fff}
-    .card img{width:100%;height:120px;object-fit:cover;border-radius:4px;margin-bottom:12px}
+    .container{width:92%;max-width:1000px;margin:0 auto;padding:35px 0}
 
-    /* ingredients list */
-    .ingredient{display:flex;align-items:center;gap:25px;margin:35px 0}
-    .ingredient img{width:110px;height:110px;object-fit:cover;border-radius:6px}
-    .ingredient h4{margin-bottom:4px;color:#1a8c2e;font-size:19px}
+    /* highlights */
+    .highlights{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin-bottom:30px}
+    .high{flex:1 1 180px;max-width:230px;text-align:center}
+    .high img{max-width:90px;margin-bottom:8px}
+    .high p{font-weight:700;margin:4px 0}
 
-    /* pricing */
-    .plans{display:flex;flex-wrap:wrap;gap:25px;justify-content:center}
-    .plan{flex:1 1 220px;border:1px solid #c9c9c9;border-radius:8px;padding:20px;text-align:center;background:#fff}
-    .best{border:2px solid #1fb76b;background:#e8f9ef}
-    .plan img{width:100px;margin:15px 0}
-    .price{font-size:32px;font-weight:700;margin:10px 0}
-    .btn{display:inline-block;background:var(--accent);padding:12px 26px;border-radius:5px;font-weight:700;margin-top:8px}
-    
-    /* FAQ accordion (simple open/close) */
+    /* plans */
+    .plans{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin:40px 0}
+    .plan{flex:1 1 210px;max-width:250px;border:1px solid #ccc;border-radius:6px;background:#fff;padding:20px;text-align:center}
+    .best{border:2px solid var(--accent)}
+    .plan img{max-width:100px;margin:12px 0}
+    .price{font-size:26px;font-weight:700;margin:10px 0}
+    .btn{display:inline-block;background:var(--accent);color:#fff;padding:10px 24px;border-radius:5px;font-weight:700;text-decoration:none}
+
+    /* faq */
     details{border:1px solid #dcdcdc;border-radius:5px;padding:14px;margin:12px 0;background:#fff}
     summary{cursor:pointer;font-weight:700}
 
-    /* guarantee box */
-    .guarantee{background:#0e1430;color:#fff;border-radius:12px;padding:35px;text-align:center;margin:45px auto}
-    .guarantee img{width:90px;margin-bottom:15px}
-
-    /* footer */
-    footer nav a{color:#fff;margin:0 8px;font-size:14px}
-    footer p{font-size:13px;margin-top:10px}
+    .section{margin-top:50px}
+    .disclaimer,.references{font-size:13px;color:#666;margin-top:30px}
+    footer nav a{margin:0 8px;color:#333;text-decoration:none;font-size:14px}
   </style>
 </head>
 <body>
 
-  <!-- ── HERO ── -->
-  <header>
-    <img src="assets/images/6pot.png" alt="Sugar Sweep Logo" style="max-width:160px">
-  </header>
+<!-- HEADER -->
+<header>
+  <img src="assets/images/sugar-sweep-logo.png" alt="Sugar Sweep Logo">
+</header>
 
-  <section class="hero">
-    <h1 style="color: white;">Meet <span style="color:#ffd34d">Sugar Sweep</span> – A Gentle Way to Support Balanced Blood‑Sugar</h1>
+<div class="container">
+
+  <!-- INTRO -->
+  <section style="text-align:center">
+    <h1>Sugar Sweep: Gentle Support for Healthy Glucose Levels</h1>
+    <p>Powered by time‑tested botanicals, Sugar Sweep helps you maintain balanced blood‑sugar and steady energy—day after day.</p>
   </section>
 
-  <div class="container">
+  <!-- HIGHLIGHTS -->
+  <section class="highlights">
+    <div class="high">
+      <img src="assets/images/energy.jpg" alt="Energy">
+      <p>Steady Energy</p>
+    </div>
+    <div class="high">
+      <img src="assets/images/scale.jpg" alt="Scale">
+      <p>Weight Friendly</p>
+    </div>
+    <div class="high">
+      <img src="assets/images/plant.jpg" alt="Plant‑Based">
+      <p>100 % Plant</p>
+    </div>
+    <div class="high">
+      <img src="assets/images/easy.jpg" alt="Easy">
+      <p>2‑Caps Routine</p>
+    </div>
+    <div class="high">
+      <img src="assets/images/craving.jpg" alt="Cravings">
+      <p>Craving Control</p>
+    </div>
+  </section>
 
-    <!-- ── VALUE PROPOSITION ── -->
-    <section style="text-align:center;max-width:750px;margin:0 auto 50px">
-      <h2><span style="color:var(--brand)">Sugar Sweep</span> helps you stay on top of healthy glucose levels</h2>
-      <p>Thousands choose Sugar Sweep as a <strong>plant‑based daily ally</strong> to encourage balanced blood sugar, reduce cravings, and support a healthy weight — all without harsh additives.</p>
-    </section>
+  <!-- INGREDIENTS (brief) -->
+  <section>
+    <h2>Main Ingredients</h2>
+    <ul>
+      <li><strong>Bitter Melon</strong> – traditional glucose‑support fruit</li>
+      <li><strong>Banaba Leaf</strong> – source of corosolic acid</li>
+      <li><strong>Olive Leaf</strong> – rich in oleuropein antioxidants</li>
+    </ul>
+  </section>
 
-    <!-- ── BENEFIT CARDS ── -->
-    <section class="grid">
-      <div class="card">
-        <img src="assets/images/energyboost.jpg" alt="Active seniors">
-        <h3>Natural Energy</h3>
-        <p>Feel steady and alert through the day, avoiding energy crashes.</p>
+  <!-- PLANS -->
+  <section class="section">
+    <h2 style="text-align:center">Select Your Package</h2>
+    <div class="plans">
+      <div class="plan">
+        <h3>1 Bottle</h3>
+        <img src="assets/images/sugar-sweep-bottle.png" alt="1 bottle">
+        <p class="price">$89</p>
+        <a class="btn" href="#">Add to Cart</a>
       </div>
-      <div class="card">
-        <img src="assets/images/wlmanagement.jpg" alt="Scale">
-        <h3>Weight Guidance</h3>
-        <p>Balanced glucose can make it easier to reach weight‑management goals.</p>
+      <div class="plan best">
+        <h3>6 Bottles</h3>
+        <img src="assets/images/sugar-sweep-6.png" alt="6 bottles">
+        <p class="price">$49/bottle</p>
+        <a class="btn" href="#">Add to Cart</a>
       </div>
-      <div class="card">
-        <img src="assets/images/naturalingredients.jpg" alt="Leaves">
-        <h3>100 % Plant‑Based</h3>
-        <p>No artificial fillers — just a careful blend of botanical extracts.</p>
+      <div class="plan">
+        <h3>3 Bottles</h3>
+        <img src="assets/images/sugar-sweep-3.png" alt="3 bottles">
+        <p class="price">$59/bottle</p>
+        <a class="btn" href="#">Add to Cart</a>
       </div>
-      <div class="card">
-        <img src="assets/images/easytotake.jpg" alt="Woman drinking water">
-        <h3>Easy Routine</h3>
-        <p>Two small capsules daily fit effortlessly into your lifestyle.</p>
-      </div>
-      <div class="card">
-        <img src="assets/images/sugarcravings.jpg" alt="Sugar cubes">
-        <h3>Craving Control</h3>
-        <p>Support healthy appetite signals and reduce sweet temptations.</p>
-      </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- ── INGREDIENTS ── -->
-    <section style="margin-top:60px">
-      <h2 style="text-align:center">Inside Every Sugar Sweep Capsule</h2>
+  <!-- GUARANTEE -->
+  <section class="section" style="text-align:center">
+    <h2>180‑Day Money‑Back Assurance</h2>
+    <p>Try Sugar Sweep for a full six months. If it’s not right for you, request a hassle‑free refund.</p>
+  </section>
 
-      <div class="ingredient">
-        <img src="assets/images/ingredient1.png" alt="Cocoa beans">
-        <div>
-          <h4>Cocoa Bean Extract</h4>
-          <p>Rich in antioxidants that help support normal glucose metabolism.</p>
-        </div>
-      </div>
+  <!-- FAQ -->
+  <section class="section">
+    <h2 style="text-align:center">Frequently Asked Questions</h2>
+    <details open><summary>When might I notice effects?</summary><p>Some users feel steadier energy within weeks; results vary.</p></details>
+    <details><summary>How do I take Sugar Sweep?</summary><p>Simply take two capsules daily with water, preferably with a meal.</p></details>
+    <details><summary>Is it safe?</summary><p>Formulated with natural, non‑GMO ingredients under GMP standards. Consult a professional if needed.</p></details>
+  </section>
 
-      <div class="ingredient">
-        <img src="assets/images/ingredient2.png" alt="Olive leaves">
-        <div>
-          <h4>Olive Leaf</h4>
-          <p>Contains oleuropein, traditionally used for heart and vascular support.</p>
-        </div>
-      </div>
+  <!-- DISCLAIMER -->
+  <section class="disclaimer">
+    <p><strong>Disclaimer:</strong> Sugar Sweep is not intended to diagnose, treat, cure, or prevent disease. Statements not evaluated by the FDA.</p>
+  </section>
 
-      <div class="ingredient">
-        <img src="assets/images/ingredient3.png" alt="Eleuthero">
-        <div>
-          <h4>Eleuthero Root</h4>
-          <p>Sometimes called “Siberian ginseng,” valued for natural stamina support.</p>
-        </div>
-      </div>
+</div>
 
-      <div class="ingredient">
-        <img src="assets/images/ingredient4.png" alt="Juniper berries">
-        <div>
-          <h4>Juniper Berry</h4>
-          <p>Traditionally appreciated for gentle cleansing and wellness balance.</p>
-        </div>
-      </div>
-
-      <div class="ingredient">
-        <img src="assets/images/ingredient5.jpg" alt="Bitter melon">
-        <div>
-          <h4>Bitter Melon</h4>
-          <p>Widely used in Asia for dietary support of healthy glucose levels.</p>
-        </div>
-      </div>
-
-      <div class="ingredient">
-        <img src="assets/images/ingredient6.png" alt="Banaba leaves">
-        <div>
-          <h4>Banaba Leaf</h4>
-          <p>Contains corosolic acid, studied for its role in glucose transport.</p>
-        </div>
-      </div>
-
-      <div class="ingredient">
-        <img src="assets/images/ingredient7.png" alt="Butcher's broom">
-        <div>
-          <h4>Butcher’s Broom</h4>
-          <p>Supports healthy circulation and vascular tone.</p>
-        </div>
-      </div>
-
-      <div class="ingredient">
-        <img src="assets/images/ingredient8.png" alt="Turmeric">
-        <div>
-          <h4>Turmeric Rhizome</h4>
-          <p>Provides curcumin, a natural antioxidant with wellness benefits.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ── GUARANTEE ── -->
-    <section class="guarantee">
-      <img src="assets/images/guarantee-seal.png" alt="180‑Day Badge">
-      <h2>180‑Day Peace‑of‑Mind Guarantee</h2>
-      <p>Try Sugar Sweep for up to six months. If you’re not completely satisfied, contact us for a prompt, courteous refund.</p>
-      <div style="display:flex;justify-content:center;gap:18px;margin-top:22px">
-        <img src="assets/images/gmp.png" alt="GMP" style="width:65px">
-        <img src="assets/images/nat.png" alt="Natural" style="width:65px">
-        <img src="assets/images/usa.png" alt="USA" style="width:65px">
-        <img src="assets/images/gmo.png" alt="Non‑GMO" style="width:65px">
-      </div>
-    </section>
-
-    <!-- ── PRICING ── -->
-    <section>
-      <h2 style="text-align:center">Secure Your Sugar Sweep Savings</h2>
-      <p style="text-align:center;margin-bottom:30px">Order below to access our best discounts while stock lasts.</p>
-
-      <div class="plans">
-        <div class="plan">
-          <h3>1 Bottle</h3>
-          <p style="font-size:14px">30‑Day Supply</p>
-          <img src="assets/images/1pot.png" alt="1 bottle">
-          <div class="price">$89</div>
-          <a class="btn" href="https://buygoods.com/secure/checkout.html?account_id=10246&product_codename=sug1&redirect=aHR0cHM6Ly9zdWdhcnN3ZWVwdG9kYXkuY29tL3Vwc2VsbC1iZw==">Buy Now</a>
-          <p style="font-size:13px;margin-top:8px">+ $9.90 Shipping</p>
-        </div>
-
-        <div class="plan best">
-          <h3>6 Bottles</h3>
-          <p style="font-size:14px">180‑Day Supply</p>
-          <img src="assets/images/6pot.png" alt="6 bottles">
-          <div class="price">$49<span style="font-size:16px">/bottle</span></div>
-          <a class="btn" href="https://buygoods.com/secure/checkout.html?account_id=10246&product_codename=sug6&redirect=aHR0cHM6Ly9zdWdhcnN3ZWVwdG9kYXkuY29tL3Vwc2VsbC1iZw==">Buy Now</a>
-          <p style="font-size:13px;margin-top:8px">Free Shipping</p>
-        </div>
-
-        <div class="plan">
-          <h3>3 Bottles</h3>
-          <p style="font-size:14px">90‑Day Supply</p>
-          <img src="assets/images/3pot.png" alt="3 bottles">
-          <div class="price">$59<span style="font-size:16px">/bottle</span></div>
-          <a class="btn" href="https://buygoods.com/secure/checkout.html?account_id=10246&product_codename=sug3&redirect=aHR0cHM6Ly9zdWdhcnN3ZWVwdG9kYXkuY29tL3Vwc2VsbC1iZw==">Buy Now</a>
-          <p style="font-size:13px;margin-top:8px">Free Shipping</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ── FAQ ── -->
-    <section style="margin-top:60px">
-      <h2 style="text-align:center">Frequently Asked Questions</h2>
-
-      <details open>
-        <summary>Is Sugar Sweep right for me?</summary>
-        <p>Sugar Sweep is formulated for adults seeking gentle, plant‑based support for balanced glucose levels and overall wellness. If you have a medical condition or take medication, please consult a healthcare professional before use.</p>
-      </details>
-
-      <details>
-        <summary>Does Sugar Sweep have any side effects?</summary>
-        <p>The formula is designed to be well‑tolerated, and we haven’t received reports of significant side effects. Everyone is different, so monitor how you feel and consult a professional if you have concerns.</p>
-      </details>
-
-      <details>
-        <summary>How many bottles should I order?</summary>
-        <p>Most customers choose 3–6 bottles to enjoy continuous support and the biggest savings. Sugar Sweep is intended for daily use.</p>
-      </details>
-
-      <details>
-        <summary>What if I’m not satisfied?</summary>
-        <p>Every order is protected by our 180‑day guarantee. Simply contact us within that window for a full refund.</p>
-      </details>
-
-      <details>
-        <summary>Can I find Sugar Sweep in stores?</summary>
-        <p>To ensure authenticity and consistent quality, Sugar Sweep is sold exclusively on this website.</p>
-      </details>
-    </section>
-
-    <!-- ── REFERENCES ── -->
-    <section style="margin-top:60px">
-      <h2 style="text-align:center">Scientific References</h2>
-      <ol style="columns:2;max-width:900px;margin:25px auto;font-size:13px">
-        <li>Look AHEAD Research Group. Impact of Lifestyle Intervention on Diabetes Outcomes (Diabetes Care, 2014).</li>
-        <li>Sridhar MG et al. Bitter Melon &amp; Blood Glucose (Journal of Alternative Medicine, 2008).</li>
-        <li>Oshima M et al. Maca Root &amp; Glucose Homeostasis (Diabetes Research, 2006).</li>
-        <li>Jordan P, Kim D. Herbal Nutrition in Modern Health (World Wellness J, 2024).</li>
-        <li>Miller R, Zhang Y. Adaptogens &amp; Energy Regulation (Integrative Health Rev, 2023).</li>
-      </ol>
-    </section>
-
-    <!-- ── DISCLAIMER ── -->
-    <section style="font-size:13px;color:#666;max-width:900px;margin:40px auto;text-align:center">
-      <p><strong>Disclaimer:</strong> The information on this site is for educational purposes and is not a substitute for professional medical advice. Sugar Sweep is not intended to diagnose, treat, cure, or prevent any disease. Individual results vary.</p>
-    </section>
-  </div>
-
-  <!-- ── FOOTER ── -->
-  <footer>
-    <nav>
-      <a href="privacy-policy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms &amp; Conditions</a> |
-      <a href="refund.html">Refund Policy</a> |
-      <a href="mailto:support@sugarsweep.com">Contact</a>
-    </nav>
-    <p>&copy; 2025 Sugar Sweep. All rights reserved.</p>
-    This site is not part of Tik Tok, Inc. or TikTok.com, nor is it sponsored or endorsed by Tik Tok. Tik Tok is a trademark of ByteDance, Ltd.
-            <br><br>
-            Disclaimer: This site is provided for educational purposes only.
-            Please consult a health professional before implementing any strategy discussed on this website.
-            DISCLAIMER: The website’s content is based upon the author’s opinion and is provided on an “AS IS” and “AS AVAILABLE” basis.
-            You should do your own research and confirm the information with other sources when searching for information regarding health issues and always review the information carefully with your professional health care provider before using any of the protocols presented on this website and/or in the product sold here.
-            <br><br>
-            The author is not engaged in rendering medical or similar professional services or advice via this website, and the information provided is not intended to replace medical advice offered by a physician or other licensed health care provider.
-  </footer>
+<!-- FOOTER -->
+<footer>
+  <nav>
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms&nbsp;&amp;&nbsp;Conditions</a> |
+    <a href="refund.html">Refund Policy</a> |
+    <a href="mailto:support@sugarsweep.com">Contact</a>
+  </nav>
+  <p style="font-size:13px">&copy; 2025 Sugar Sweep. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
