--- a/index.html
+++ b/index.html
@@ -3,105 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sugar Sweep – Balanced Glucose Formula</title>
+  <title>Sugar Sweep – Natural Glucose Companion</title>
 
   <style>
     :root{
-      --bg:      #fdfaf4;   /* light beige */
-      --header:  #ebe6dc;   /* soft taupe header */
-      --accent:  #29b37b;   /* fresh green CTA */
-      --brand:   #53356b;   /* plum text accent */
+      --bg:      #fcfcff;      /* very‑light lavender */
+      --header:  #ede9f4;      /* pale plum */
+      --accent:  #3478f6;      /* calm blue CTA */
+      --brand:   #4d3170;      /* plum text */
       --text:    #444;
     }
     *{box-sizing:border-box;margin:0;padding:0}
     body{font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text);line-height:1.6}
+
     h1,h2,h3{font-weight:700;margin:0 0 10px}
     h1{font-size:28px;color:var(--brand);margin-top:20px}
     h2{font-size:24px}
     h3{font-size:20px}
-    p{margin:10px 0}
-    a{text-decoration:none;color:inherit}
 
     header,footer{text-align:center;background:var(--header);padding:24px}
     header img{max-width:180px}
 
     .container{width:92%;max-width:1000px;margin:0 auto;padding:35px 0}
 
-    /* highlight grid */
-    .highlights{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin-bottom:30px}
-    .high{flex:1 1 180px;max-width:230px;text-align:center;background:#fff;border:1px solid #e1e1e1;border-radius:6px;padding:16px}
+    /* highlights */
+    .highlights{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin-bottom:32px}
+    .high{flex:1 1 180px;max-width:230px;text-align:center;background:#fff;border:1px solid #e3e3e3;border-radius:6px;padding:16px}
     .high img{max-width:90px;margin-bottom:8px}
     .high p{font-weight:700;margin:4px 0}
 
     /* plans */
-    .plans{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin:42px 0}
+    .plans{display:flex;flex-wrap:wrap;gap:22px;justify-content:center;margin:44px 0}
     .plan{flex:1 1 210px;max-width:250px;border:1px solid #ccc;border-radius:6px;background:#fff;padding:22px;text-align:center}
-    .best{border:2px solid var(--accent);background:#ecfaf3}
+    .best{border:2px solid var(--accent);background:#eef4ff}
     .plan img{max-width:100px;margin:14px 0}
     .price{font-size:26px;font-weight:700;margin:10px 0}
     .btn{display:inline-block;background:var(--accent);color:#fff;padding:10px 26px;border-radius:5px;font-weight:700;margin-top:6px}
 
-    /* FAQ accordion */
+    /* FAQ */
     details{border:1px solid #dcdcdc;border-radius:5px;padding:14px;margin:12px 0;background:#fff}
     summary{cursor:pointer;font-weight:700}
 
-    .section{margin-top:48px}
+    .section{margin-top:50px}
     .disclaimer{font-size:13px;color:#666;margin-top:35px}
-    footer nav a{margin:0 8px;color:#333;font-size:14px}
+    footer nav a{margin:0 8px;color:#333;font-size:14px;text-decoration:none}
   </style>
 </head>
 <body>
 
-<!-- HEADER -->
+<!-- HEADER (image path unchanged) -->
 <header>
-  <img src="assets/images/sugar-sweep-logo.png" alt="Sugar Sweep Logo">
+  <img src="assets/images/6pot.png" alt="Sugar Sweep Bottles">
 </header>
 
 <div class="container">
 
   <!-- INTRO -->
   <section style="text-align:center">
-    <h1>Feel Steady Every Day with <span style="color:var(--accent)">Sugar Sweep</span></h1>
-    <p>A gentle, plant‑powered formula crafted to help keep blood‑sugar levels within a healthy range and support lasting vitality.</p>
+    <h1>Stabilize Your Day with <span style="color:var(--accent)">Sugar Sweep</span></h1>
+    <p>A gentle botanical blend designed to help you maintain comfortable blood‑sugar levels and consistent energy.</p>
   </section>
 
-  <!-- HIGHLIGHTS -->
+  <!-- HIGHLIGHTS (image src unchanged) -->
   <section class="highlights">
     <div class="high">
-      <img src="assets/images/energy.jpg" alt="Energy">
-      <p>Sustained Energy</p>
+      <img src="assets/images/energyboost.jpg" alt="Energy">
+      <p>All‑Day Energy</p>
     </div>
     <div class="high">
-      <img src="assets/images/scale.jpg" alt="Scale">
-      <p>Weight Friendly</p>
+      <img src="assets/images/wlmanagement.jpg" alt="Scale">
+      <p>Weight Support</p>
     </div>
     <div class="high">
-      <img src="assets/images/plant.jpg" alt="Plant‑Based">
+      <img src="assets/images/naturallingredients.jpg" alt="Botanicals">
       <p>Pure Botanicals</p>
     </div>
     <div class="high">
-      <img src="assets/images/easy.jpg" alt="Easy">
+      <img src="assets/images/easytotake.jpg" alt="Easy">
       <p>2‑Caps Ease</p>
     </div>
     <div class="high">
-      <img src="assets/images/craving.jpg" alt="Cravings">
-      <p>Craving Support</p>
+      <img src="assets/images/sugarcravings.jpg" alt="Cravings">
+      <p>Craving Control</p>
     </div>
   </section>
 
-  <!-- INGREDIENTS (brief) -->
+  <!-- INGREDIENTS (image src unchanged) -->
   <section>
-    <h2>Core Botanicals</h2>
+    <h2>Key Plant Ingredients</h2>
     <ul>
-      <li><strong>Bitter Melon</strong> – time‑honored glucose ally</li>
-      <li><strong>Banaba Leaf</strong> – naturally rich in corosolic acid</li>
+      <li><strong>Bitter Melon</strong> – traditional glucose ally</li>
+      <li><strong>Banaba Leaf</strong> – source of corosolic acid</li>
       <li><strong>Olive Leaf</strong> – oleuropein for vascular wellness</li>
     </ul>
   </section>
 
-  <!-- PLANS -->
+  <!-- PLANS (image src & links unchanged) -->
   <section class="section">
-    <h2 style="text-align:center">Choose Your Best Value</h2>
+    <h2 style="text-align:center">Pick Your Package</h2>
     <div class="plans">
       <div class="plan">
         <h3>1 Bottle</h3>
@@ -129,23 +128,30 @@
     </div>
   </section>
 
-  <!-- GUARANTEE -->
+  <!-- GUARANTEE (image src unchanged) -->
   <section class="section" style="text-align:center">
-    <h2>180‑Day Satisfaction Guarantee</h2>
-    <p>Give Sugar Sweep a try for six months. If it’s not the right fit, request a full refund—no hassle.</p>
+    <img src="assets/images/guarantee-seal.png" alt="180‑Day Guarantee" style="width:85px;margin-bottom:14px">
+    <h2>180‑Day Money‑Back Promise</h2>
+    <p>Enjoy Sugar Sweep for up to six months. If it doesn’t suit you, request a full refund.</p>
+    <div style="display:flex;justify-content:center;gap:18px;margin-top:22px">
+      <img src="assets/images/gmp.png" alt="GMP" style="width:60px">
+      <img src="assets/images/nat.png" alt="Natural" style="width:60px">
+      <img src="assets/images/usa.png" alt="USA" style="width:60px">
+      <img src="assets/images/gmo.png" alt="Non‑GMO" style="width:60px">
+    </div>
   </section>
 
   <!-- FAQ -->
   <section class="section">
-    <h2 style="text-align:center">Common Questions</h2>
-    <details open><summary>How soon might I notice benefits?</summary><p>Many users feel steadier within weeks, but results differ for everyone.</p></details>
-    <details><summary>What’s the best way to take it?</summary><p>Simply take two capsules daily with a glass of water, preferably with food.</p></details>
-    <details><summary>Is Sugar Sweep safe?</summary><p>Formulated with non‑GMO botanicals under GMP standards. If you have a condition or take medication, consult a healthcare provider first.</p></details>
+    <h2 style="text-align:center">Questions & Answers</h2>
+    <details open><summary>How quickly will I notice benefits?</summary><p>Many users report steadier energy in a few weeks. Results vary.</p></details>
+    <details><summary>How do I take Sugar Sweep?</summary><p>Take two capsules daily with water, ideally alongside a meal.</p></details>
+    <details><summary>Is it safe?</summary><p>Manufactured in GMP‑certified facilities with non‑GMO botanicals. Consult your physician if you have concerns.</p></details>
   </section>
 
   <!-- DISCLAIMER -->
   <section class="disclaimer">
-    <p><strong>Disclaimer:</strong> Statements on this site have not been evaluated by the FDA. This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
+    <p><strong>Disclaimer:</strong> Statements have not been evaluated by the FDA. Product not intended to diagnose, treat, cure, or prevent disease.</p>
   </section>
 
 </div>
